# BAML-receipt-extractor

./: .env.sample  .gitignore  README.md  README_fastapi.md  baml_util.py  main.py  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: clients.baml  receipt.baml  receipt_models.baml
